# DigitalnaTrgovina

./: README.md
app-service/: .dockerignore  Dockerfile  Dockerfile.test  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum  sqlc.yaml
app-service/app/v1/: app.proto
app-service/cmd/server/: main.go
app-service/docker/: Dockerfile  docker-compose.yml
app-service/internal/config/: config.go
app-service/internal/database/: database.go
app-service/internal/handler/: handler.go  handler_test.go
app-service/internal/integration/: integration_test.go
app-service/internal/logging/: logging.go
app-service/internal/models/: application.go
app-service/k8s/: config.yaml  deployment.yaml  service.yaml
app-service/migrations/: 000001_init_schema.down.sql  000001_init_schema.up.sql
app-service/scripts/: run-integration-tests.sh
authentication/: .gitignore  Dockerfile  Makefile  README.md  exec.sh  go.mod  go.sum
authentication/proto/: auth.proto
authentication/src/: main.go
payment/: README.md  go.mod  go.sum
reviews/: .env  Cargo.toml  README.md  build.rs  sqlx-data.json
reviews/.sqlx/: query-79a211510d0190f6fdb37c92c22bbba48e4b88e124f75acbe5fc3d13a1e29eaa.json  query-e66947f4ce4c7a7785cffb027edcac0e659b120a02275e7eeb05e9edc14175f7.json
reviews/db/: schema.sql
reviews/db/migrations/: 20240000000000_initial.sql  20240000000001_add_tenant_id.sql
reviews/docker/: Dockerfile  docker-compose.yaml
reviews/docker/compose/: docker-compose.yaml
reviews/proto/: reviews.proto
reviews/src/: extension.rs  main.rs  service.rs
(+25 files in other folders)
