[package]
name = "reviews"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
prost = "0.13.3"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "time",
    "uuid",
] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.38"
dotenvy = "0.15.7"
uuid = "1.11.0"

[build-dependencies]
tonic-build = "0.12.3"

[profile.dev.package.sqlx-macros]
opt-level = 3
